<resources>
    <string name="app_name">Chakrin Health</string>
    <string name="title_activity_welcome">Home Screen</string>
    <string name="next">NEXT</string>
    <string name="skip">SKIP</string>
    <string name="start">GOT IT</string>
    <string name="slide_1_title">Daily Workout</string>
    <string name="slide_1_desc">Set your daily workout routine by the help of trainer</string>
    <string name="slide_2_title">Meditation Techniques </string>
    <string name="slide_2_desc">Learn about the different meditation techniques and practice them</string>
    <string name="slide_3_title">Diet Chart</string>
    <string name="slide_3_desc">Make your diet chart by the help of health experts</string>
    <string name="play_again_desc">To see the welcome slider again, goto Settings -> apps -> welcome slider -> clear data</string>
    <string name="play_again">Play Again</string>
    <string name="login">Login</string>
    <string name="reg_name_hint">Registered Phone Number</string>
    <string name="hint_password">Password</string>
    <string name="btn_submit">Submit</string>
    <string name="reg_name">Name</string>
    <string name="reg_phone_number">Phone number</string>
    <string name="reg_email_id">Email Id</string>
    <string name="reg_id_card_number">ID Card Number</string>
    <string name="reg_id_card_type">ID card type</string>
    <string name="reg_photo">Photo of the Id Card</string>
    <string name="reg_photo_of_the_user">Photo of the User</string>
    <string name="sign_up">Signup</string>
    <string name="elon_musk">Elon Musk</string>
    <string name="tracking">Tracking</string>
    <string name="str_or">OR</string>
    <string name="call_driver">Call Driver</string>
    <string name="vehicle_tap_caps">VEHICLE TAP</string>
    <string name="title_activity_maps">Map</string>
    <string name="school_name">School name</string>
    <string name="student_registration">STUDENT REGISTRATION</string>
    <string name="parent_registration">PARENT REGISTRATION</string>
    <string name="house_number_street_name">House Number/ Street Name</string>
    <string name="district">District</string>
    <string name="state">State</string>
    <string name="your_pickup_location">Your PickUp Location</string>
    <string name="current_address">Your current address is:</string>
    <string name="edit_address">Edit Address</string>
    <string name="edit_location">Edit Location</string>
    <string name="done">Done</string>
    <string name="pin_code">Pin code</string>
    <string name="change_address">Change Address</string>
    <string name="profile">Profile</string>
    <string name="settings">Settings</string>
    <string name="communicate">Communicate</string>
    <string name="about_us">About Us</string>
    <string name="contact_us">Contact Us</string>
    <string name="vehicle_tap">VEHICLE TAP</string>
    <string name="worried_about_your_child_s_safety">Worried about your child\'s safety?</string>
    <string name="tracking_text">We track a custom built device embedded in the school bus that gives you live location of your child irrespective of weather the location has internet connectivity or not.</string>
    <string name="sign_up_text">Simply sign up with our app and we will make sure that you have every detail about your child\'s wellness all the time.</string>
    <string name="relax_text">Sit back and relax , we\'ve got it.</string>
    <string name="stressting_text">It is normally very stressing when your kid is at school and for some reason the bus driver is delayed at dropping your kid at home, there\'s no way to track the problem or to find out if the your ward is safe.</string>
    <string name="vehicle_tap_does_this_text">But now with Vehicle Tap you can track not only buses but the exact time when your kid boarded the bus and where the bus is exactly right now.</string>
    <string name="loading">Loading...</string>
    <string name="loader_traffic">traffic_lights.json</string>
    <string name="loader_man_walking">man_with_headphones_casully_walking.json</string>
    <string name="loader_infinity">infinity_loader.json</string>
    <string name="loader_circulating_circle">circulating_circle_loader.json</string>
    <string name="furnace_temperature">Furnace Temperature</string>
    <string name="motor_rpm">Motor RPM</string>
    <string name="coal_level">Coal Level</string>
    <string name="shloka_hindi_l1">अच्युताय नमः</string>
    <string name="shloka_hindi_l2">अनन्ताय नमः</string>
    <string name="shloka_hindi_l3">गोविन्दाय नमः</string>

    <string name="vata_details">Vata dwells in the colon, hips, thighs, ears, bones and sense of touch.\n Management of increased Vata(Oct - Dec)\nThe cold quality of vata may lead you to feel cold more easily than others around you, have cold hands and feet, and crave warmth.\n- Abhyanga with warm oil.\n- Avoiding dry &amp; cold foods,have warm food &amp; water. Add soup &amp; sweet foods to your diet.\n- Warm clothes especially cover your head &amp; feet.</string>
    <string name="kapha_details">Kapha dwells in lungs,respiratory tract,semen,muscles,fat,and brain.\nManagement of Increased Kapha(Dec - Feb)\nThe main qualities of Kapha are cold,heavy,steady &amp; slow.\n- Kapha being cold,it is essential that special care is taken in winter months. Staying as warm as possible - fully covered,warm foods &amp; drinks,loving company all benefit the Kapha type.\nDo the following -\n- Abhyanga(oil massage) with sesame oil.</string>
    <string name="pitta_details">Pitta dwells in the small intestine, stomach, sweat, sebum, blood, plasma, and sense of sight.\nManagement of increased Pitta(April-June &amp; Aug-Oct)\nThe main qualities of pitta are oily, sharp, hot, light, fleshy smelling, spreading, and liquid.\n- Pitta is inherently hot—hot weather, hot foods, the hot seasons &amp; times of day, &amp; even hot emotions can increase pitta.\nDo the following - \n- Abhyanga or Padabhyanga with coconut oil in hot weather.\n- Foods which are sweet,bitter &amp; astringent are best in summer to manage pitta.\n- Meditation to reduce mental heat &amp; calm the nerves.\n- Avoid intense exercise</string>


    <string-array name="loader_array">
        <item>@string/loader_circulating_circle</item>
        <item>@string/loader_infinity</item>
        <item>@string/loader_man_walking</item>
        <item>@string/loader_traffic</item>
    </string-array>
    <string name="title_activity_bottom_main">BottomMainActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="user_registration">USER REGISTRATION</string>
    <string name="confirm_password">Confirm Password</string>


    <string name="day_date_format">EEEE, MMM dd yyyy</string>
    <string name="date_format_past">MMM dd, hh:mm aa</string>
    <string name="day_format_long">EEEE, MMMM dd, yyyy</string>
    <string name="time_format">hh:mm aa</string>
    <string name="hour_min_full">HH:mm</string>


    <string name="date_time_format">EEEE, MMM dd, yyyy hh:mm aa</string>
    <string name="simple_date">dd/MM/yyyy</string>
    <string name="simple_date_time">dd/MM/yyyy hh:mm a</string>
    <string name="week_lower_only">week</string>
    <string name="quote_ayurveda">“Ayurveda teaches us to cherish our innate-nature “to love and honor who we are”, not as what people think or tell us, who we should be.”</string>
    <string name="dosha_mini_str">The five elements combine to form three main energies of bodies...</string>
    <string name="prakriti_mini_str">Dominant dosha inside the individual\'s body decides their body type...</string>
    <string name="dincharya_mini_str">Your day to day activities can affect your well-being, tap to know more...</string>
    <string name="ritu_mini_str">Learn how seasons affect your metabolism and what you should do about it...</string>
    <string name="fitness_quote">I hated every minute of training, but I said, \'Don\'t quit. Suffer now and live the rest of your life as a champion</string>
    <string name="glutes_text">The butt consists of three main muscles: the gluteus maximus, gluteus medius, and gluteus minimus. They work together to help us move our legs in all directions. Because they\'re connected to the hips, the lower back, and the legs, strengthening the glutes can help to stabilize the back.</string>
    <string name="full_body_workout">A full body workout is just what it sounds like: a workout that aims to hit all the major muscle groups in one single session. Popular programs would include exercises for back, legs, chest, shoulders, arms and core. There are many reasons some trainees like to utilise a full body workout, whether from time to time or as a standard go-to in their workout routine. “When performing full-body workouts, you don’t want to waste time doing isolation exercises,” says personal trainer Matt Hampton. “You want to get the biggest, hardest exercises done for the biggest muscle stimulation.” There are countless variations and ways to structure full body workouts but they all have this above idea in common.</string>
    <string name="upper_body_work">The pull up is a classic exercise and one that is used to target the muscles of the upper back. The movement accomplishes the vertical pull movement pattern. The pull up is thought to be one of the best back exercises for lats. However, not a lot of people can perform them. The workout progressions at the bottom of this article will show you how you can train from a beginner stage to being able to perform an unassisted bodyweight pull up in the advanced stage.</string>
    <string name="cardio">Aerobic exercise (also known as cardio or cardio-respiratory exercise) is physical exercise[1] of low to high intensity that depends primarily on the aerobic energy-generating process.[2] Aerobic is defined as relating to, involving, or requiring free oxygen and refers to the use of oxygen to adequately meet energy demands during exercise via aerobic metabolism.[4] Aerobic exercise is performed by repeating sequences of light-to-moderate intensity activities for extended periods of time.</string>

    <string-array name="sector">
        <item>Printing</item>
        <item>Vertical Pumps</item>
        <item>Gearbox and CNC</item>
        <item>Air Croots and Air Voc</item>
        <item>Pulling and Lifting</item>
        <item>Thevrim Power</item>
        <item>Cooling Tower</item>
        <item>Wire</item>
        <item>Auto</item>
        <item>Sular/Paper/Rolling</item>
        <item>Expellors</item>
        <item>Glass Machine</item>
        <item>Bhatti Repair</item>
        <item>Self/Own</item>
        <item>Others</item>
    </string-array>

</resources>
